fixed ie/ff gap bug between sections #86

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -322,7 +322,7 @@ a:active {
 #referenciak,
 #kapcsolat {
   height: 100%;
-  padding-bottom: .0001em;
+  padding-bottom: 2em;
   position: relative;
   width: 100%;
 }
